# plateau-qgis-plugin

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: README.md  manual.md  manual2.md
docs/picture/: ~$画像生成用.pptx  画像生成用.pptx
document/: manual.md  manual2.md  画像生成用.pptx
plateau_plugin/: __init__.py  algorithm.py  geometry.py  metadata.txt  plugin.py  provider.py
plateau_plugin/algorithms/: load_dem.py  load_vector.py
plateau_plugin/algorithms/utils/: layermanger.py
plateau_plugin/document/: manual.md  manual2.md
plateau_plugin/plateau/: __main__.py  appearance.py  geometry.py  namespaces.py  parser.py  types.py
plateau_plugin/plateau/codelists/: __init__.py  codelists.json
plateau_plugin/plateau/models/: __init__.py  _tunnel.py  _urf_area.py  _uro_cons.py  _uro_ubld.py  _uro_unf.py  attr_disaster_risk.py  base.py  bridge.py  building.py  cityfurniture.py  common.py  generics.py  landslide.py  landuse.py  relief.py  sediment.py  transportation.py  tunnel.py  urf_landslide.py  urf_lsld.py  urf_zone.py  uro_dm.py  uro_other_construction.py  uro_ubld.py  uro_underground_building.py  uro_underground_furniture.py  uro_utility_network.py  vegetation.py  waterbody.py
plateau_plugin/plateau/models/urf_zone/: __init__.py  common.py  district_dev_plans.py  district_facilities.py  district_plans.py  districts_and_zones.py  promotion_areas.py  scheduled_areas.py  simple.py  urban_dev_projects.py  urban_facilities.py
plateau_plugin/plateau/parse/: __init__.py  appearance.py  geometry.py  parser.py
tests/: conftest.py  test_plugin.py
