[tool.poetry]
name = "qgis-plateau-plugin"
version = "0.0.0"
description = ""
authors = ["Project PLATEAU <no-reply@mlit.go.jp>"]
readme = "README.md"
packages = [{ include = "plateau_plugin" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyqt5-stubs = "^5.15.6.0"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]
# filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "B",
    "N",
    "UP",
    "I",
    "C90",
    "C4",
    "DTZ",
    "PIE",
    "PT",
    "Q",
    "SIM",
    "RUF",
]
ignore = ["N802", "E501"]

[tool.ruff.lint.isort]
known-third-party = ["plateau"]

[tool.coverage.run]
source = ['plateau_plugin']
concurrency = ["thread"]
