[project]
name = "qgis-plateau-plugin"
version = "0.0.0"
description = ""
authors = ["Project PLATEAU <no-reply@mlit.go.jp>"]
readme = "README.md"
requires-python = ">=3.8.1,<4.0"
packages = [{ include = "plateau_plugin" }]

[dependency-groups]
dev = [
    "pytest >=8",
    "pytest-cov>=4",
    "pyqt5-stubs>=5",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]
# filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
target-version = "py38"
lint.select = [
    "F",
    "E",
    "W",
    "B",
    "N",
    "UP",
    "I",
    "C90",
    "C4",
    "DTZ",
    "PIE",
    "PT",
    "Q",
    "SIM",
    "RUF",
]
lint.ignore = ["N802", "E501"]

[tool.ruff.lint.isort]
known-third-party = ["plateau"]

[tool.coverage.run]
source = ['plateau_plugin']
concurrency = ["thread"]
